<resources>
    <string name="app_name">YazlabProje</string>
    <string name="giris_Yap">GİRİŞ YAP</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="kullanici_ad">Kullanıcı Adı</string>
    <string name="kullaniciad_Gir">Kullanıcı Adınızı Girin</string>
    <string name="sifre_gir">Şifrenizi Giriniz</string>
    <string name="sifre">Şifre</string>
    <string name="kullanici_giris">Kullanıcı Girişi Yapınız</string>
    <string name="title_activity_yonetici_home">YoneticiHomeActivity</string>
    <string name="tab_text_1">Rota Oluşturma</string>
    <string name="tab_text_2">Yolcu Bilgileri Gir</string>
    <string name="tab_text_3">Proje 3</string>
    <string name="title_activity_maps2">MapsActivity2</string>
    <string name="title_activity_yonetici_sehirler">YoneticiSehirlerActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="SehirGir">Yolcu Sayısı</string>

</resources>